Add a map of the venue

--- a/index.html
+++ b/index.html
@@ -43,8 +43,18 @@
       img {
         display: block;
         height: auto;
-        margin-top: 1.5em;
+        margin: 1.5em 0;
         max-width: 100%;
+      }
+
+      iframe {
+        height: auto;
+        margin: 1.5em 0;
+        max-width: 100%;
+      }
+
+      a {
+        color: inherit;
       }
     </style>
   </head>
@@ -55,5 +65,21 @@
     <p> April 27, 2019 </p>
 
     <img alt="" src="taylor-and-hillary.jpg" width="900" height="600">
+
+    <p> <a href="https://www.gathervenues.com/lamar/">Gather</a> in Austin, Texas </p>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d215.24528335243244!2d-97.72790612436883!3d30.32466434194603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644ca4259b025ad%3A0x27b72bfdbf8f793c!2sVuka+North+Lamar!5e0!3m2!1sen!2sus!4v1531067684265" width="800" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+    <!--
+    TODO:
+    - RSVP
+    - Wedding events
+    - Accomodations
+    - Registry
+    - Travel
+    - Photos
+    - Contact
+    -->
+
   </body>
 </html>
