--- a/index.html
+++ b/index.html
@@ -7,54 +7,71 @@
 
     <title> Taylor &amp; Hillary </title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sanchez">
-
     <style>
       html {
         background: rgb(241, 241, 241);
       }
 
       body {
-        font: 20px / 1.5em 'Sanchez', sans-serif;
+        color: rgb(14, 14, 14);
+        font: 20px / 1.5em sans-serif;
         margin: 1.5em auto;
         max-width: 40em;
-        text-align: center;
       }
 
       h1 {
         color: rgb(114, 172, 182);
-        font-size: 2em;
-        font-weight: normal;
-        line-height: 1.5em;
-        margin: 0;
-        word-spacing: -0.3em;
+        text-align: center;
+        word-spacing: -0.25em;
       }
 
-      span {
+      h1 span {
         color: rgb(166, 205, 219);
       }
 
-      p {
+      a {
         color: rgb(233, 120, 197);
-        font-size: 1.5em;
-        margin: 0;
+      }
+
+      ul {
+        list-style: none;
+        text-align: center;
+      }
+
+      ul li {
+        display: inline-block;
+      }
+
+      ul li a {
+        text-decoration: none;
+      }
+
+      ul li + li ::before {
+        content: ' \b7 ';
+      }
+
+      dt {
+        font-weight: bold;
+      }
+
+      dd + dt {
+        margin-top: 1.5em;
+      }
+
+      .center {
+        text-align: center;
+      }
+
+      iframe {
+        border: 0;
+        height: auto;
+        max-width: 100%;
       }
 
       img {
         display: block;
         height: auto;
-        margin: 1.5em 0;
         max-width: 100%;
-      }
-
-      iframe {
-        height: auto;
-        margin: 1.5em 0;
-        max-width: 100%;
-      }
-
-      a {
-        color: inherit;
       }
     </style>
   </head>
@@ -62,24 +79,122 @@
   <body>
     <h1> Taylor <span> &amp; </span> Hillary </h1>
 
-    <p> April 27, 2019 </p>
+    <ul>
+      <li> <a href="#events"> Events </a> </li>
+      <li> <a href="#accomodations"> Accomodations </a> </li>
+      <li> <a href="#rsvp"> RSVP </a> </li>
+      <li> <a href="#registry"> Registry </a> </li>
+      <li> <a href="#contact"> Contact </a> </li>
+      <li> <a href="#photos"> Photos </a> </li>
+      <li> <a href="#faq"> FAQ </a> </li>
+    </ul>
 
     <img alt="" src="taylor-and-hillary.jpg" width="900" height="600">
 
-    <p> <a href="https://www.gathervenues.com/lamar/">Gather</a> in Austin, Texas </p>
+    <!-- EVENTS -->
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d215.24528335243244!2d-97.72790612436883!3d30.32466434194603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644ca4259b025ad%3A0x27b72bfdbf8f793c!2sVuka+North+Lamar!5e0!3m2!1sen!2sus!4v1531067684265" width="800" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <h2 id="events"> Events </h2>
 
-    <!--
-    TODO:
-    - RSVP
-    - Wedding events
-    - Accomodations
-    - Registry
-    - Travel
-    - Photos
-    - Contact
-    -->
+    <h3> Friday night drinks </h3>
+
+    <p>
+      We would love for anyone who is able to join us for drinks on Friday evening at <a href="http://oliveandjune-austin.com/"> Olive &amp; June </a> from 9:00 to 11:00 PM. Please find us in the 3rd floor private event space. Complimentary valet is available, as well as some street parking. Cash bar.
+    </p>
+
+    <h3> Ceremony &amp; reception </h3>
+
+    <dl>
+      <dt> When </dt>
+      <dd>
+        <p>
+          Saturday, April 27, 2019 at 6:00 PM <br>
+          <small> Please arrive 15 minutes early. </small>
+        </p>
+      </dd>
+
+      <dt> Where </dt>
+      <dd>
+        <p>
+          <a href="https://gathervenues.com/locations/lamar/"> Gather North Lamar </a> <br>
+          5540 N Lamar Blvd <br>
+          Austin, TX 78756
+        </p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d215.24528335243244!2d-97.72790612436883!3d30.32466434194603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644ca4259b025ad%3A0x27b72bfdbf8f793c!2sVuka+North+Lamar!5e0!3m2!1sen!2sus!4v1531067684265" width="800" height="150"></iframe>
+      </dd>
+    </dl>
+
+    <!-- ACCOMODATIONS -->
+
+    <h2 id="accomodations"> Accomodations </h2>
+
+    <p> Rooms are available at the Fairfield Inn &amp; Suites (2 miles from the venue) starting at $109 per night. Follow the link below or call (512) 302-5550 and mention the Cansler-Fausak wedding. Please reserve your room by March 27th. </p>
+    <p class="center">
+      <a href="https://www.marriott.com/events/start.mi?id=1549653400588&key=GRP">marriott.com/events/start.mi?id=1549653400588</a>
+    </p>
+    <p> There are many other accomodation options available at a variety of price points nearby. </p>
+
+    <!-- RSVP -->
+
+    <h2 id="rsvp"> RSVP </h2>
+
+    <p> Please RSVP by March 27, 2019 at: </p>
+    <p class="center">
+      <a href="https://taylorandhillary.anrsvp.com">taylorandhillary.anrsvp.com</a>
+    </p>
+
+    <iframe src="https://taylorandhillary.anrsvp.com/?embed=true" width="800" style="height:550px"></iframe>
+
+    <!-- REGISTRY -->
+
+    <h2 id="registry"> Registry </h2>
+
+    <p> We are so lucky to have an amazing group of friends and family, and your presence at our wedding is certainly present enough! For those who would like to send a gift, you can find our registry here: </p>
+    <p class="center">
+      <a href="https://www.zola.com/registry/taylorandhillary2019">zola.com/registry/taylorandhillary2019</a>
+    </p>
+
+    <!-- CONTACT -->
+
+    <h2 id="contact"> Contact </h2>
+
+    <p> Do you have any questions about anything? Please don't hesitate to email us: </p>
+    <p class="center">
+      Taylor: <a href="mailto:taylor@fausak.me">taylor@fausak.me</a>
+      <br>
+      Hillary: <a href="mailto:hillary.cansler@gmail.com">hillary.cansler@gmail.com</a>
+    </p>
+
+    <!-- PHOTOS -->
+
+    <h2 id="photos"> Photos </h2>
+
+    <p> <!-- TODO --> Coming soon! </p>
+
+    <!-- FAQ -->
+
+    <h2 id="faq"> FAQ </h2>
+
+    <dl>
+      <dt> Can I park at the venue? </dt>
+      <dd> Yes! There is ample free parking at the venue. If you’re planning to drive, please arrange for a designated driver! </dd>
+
+      <dt> Will there be dinner at the reception? </dt>
+      <dd> Yes! Following the ceremony, there will be a cocktail hour from 6:30 to 7:30 PM, which will be immediately followed by dinner. </dd>
+
+      <dt> Do I need to bring cash for the bar? </dt>
+      <dd> Nope! The bar at the reception will be open all night. If you are joining us at Olive and June on Friday night, there will be a cash bar. </dd>
+
+      <dt> Should I bring my ID for the bar? </dt>
+      <dd> Yes, the bartenders will be checking IDs. </dd>
+
+      <dt> Can I bring my kids? </dt>
+      <dd> Sure! </dd>
+
+      <dt> What is the dress code? </dt>
+      <dd> Semi-formal </dd>
+    </dl>
+
+    <h1 class="center"> &#x2665; </h1>
 
   </body>
 </html>
