--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <h2 id="photos"> Photos </h2>
 
-    <p> <!-- TODO --> Coming soon! </p>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="a/6PeCAaC" data-context="false"><a href="//imgur.com/6PeCAaC">Taylor &amp; Hillary</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
     <!-- FAQ -->
 
