--- a/index.html
+++ b/index.html
@@ -168,7 +168,13 @@
 
     <h2 id="photos"> Photos </h2>
 
-    <blockquote class="imgur-embed-pub" lang="en" data-id="a/6PeCAaC" data-context="false"><a href="//imgur.com/6PeCAaC">Taylor &amp; Hillary</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <div id="cp_widget_cd56cb41-9d3f-4145-9866-ce4aa627b9ee">...</div><script type="text/javascript">
+var cpo = []; cpo["_object"] ="cp_widget_cd56cb41-9d3f-4145-9866-ce4aa627b9ee"; cpo["_fid"] = "AgAAZZeK5vTf";
+var _cpmp = _cpmp || []; _cpmp.push(cpo);
+(function() { var cp = document.createElement("script"); cp.type = "text/javascript";
+cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
+var c = document.getElementsByTagName("script")[0];
+c.parentNode.insertBefore(cp, c); })(); </script>
 
     <!-- FAQ -->
 
