--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <h2 id="contact"> Contact </h2>
 
-    <p> Do you have any questions about anything? Please don't hesitate to email us: </p>
+    <p> Do you have any questions about anything? Check <a href="#faq">the FAQ</a>! If that doesn't answer you question, please don't hesitate to email us: </p>
     <p class="center">
       Taylor: <a href="mailto:taylor@fausak.me">taylor@fausak.me</a>
       <br>
